--- a/composer.json
+++ b/composer.json
@@ -4,11 +4,13 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "type": "project",
+    "minimum-stability": "dev",
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.1.*",
         "lucadegasperi/oauth2-server-laravel": "5.0.*",
-        "predis/predis": "^1.1@dev"
+        "predis/predis": "^1.1@dev",
+        "djb/guard": "dev-master"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
